<resources>

    <string name="app_name">ViewFlipperExample</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="cupcake">CupCake</string>
    <string name="donut">Donut</string>
    <string name="eclair">Eclair</string>
    <string name="froyo">Froyo</string>
    <string name="gingerbread">GingerBread</string>
    <string name="honeycomb">HoneyComb</string>
    <string name="ics">IceCreamSandwich</string>
    <string name="jellybean">JellyBean</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Previous</string>
</resources>